Fixed image stretching issue

--- a/frontend/src/app/modules/builder/canvas/canvas-preview/canvas-preview.component.scss
+++ b/frontend/src/app/modules/builder/canvas/canvas-preview/canvas-preview.component.scss
@@ -1,9 +1,11 @@
 @import "../../../../../style/colors.scss";
+@import "../../../../../style/structure";
 
 .my-modal-header {
   display: flex;
   justify-content: space-between;
   margin-bottom: 10px;
+  font-size: $largeFont;
 }
 
 .canvas-preview-container {
@@ -13,10 +15,15 @@
   background-color: $gray-20;
   border: 1px solid gainsboro;
   display: flex;
-  justify-content: center;
+  // justify-content: center;
+}
+
+.canvas-preview-wrapper {
+  transform-origin: top;
+  margin: auto;
+  padding: 50px;
 }
 
 .canvas-preview {
-  transform-origin: top;
-  margin: 30px;
+  box-shadow: 0px 0px 4px grey;
 }
