--- a/frontend/src/app/modules/shared/component/canvas-size/canvas-size.component.scss
+++ b/frontend/src/app/modules/shared/component/canvas-size/canvas-size.component.scss
@@ -1,6 +1,10 @@
 @import "../../../../../style/colors.scss";
 @import "../../../../../style/structure";
 
+.dropdown-menu {
+  z-index: $toolbarZ + 1;
+}
+
 .dropdown-item {
   font-size: $largeFont;
   display: flex;
